@@ -1,0 +1,2 @@
+--atlas -f rgba8888 -z auto
+img/spinner.png
